kubernetes/apps/base/media/plex/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-exporter
  namespace: media
  labels:
    app.kubernetes.io/name: plex-exporter
spec:
  selector:
    app.kubernetes.io/name: plex-exporter
  ports:
    - name: metrics
      port: 9594
      targetPort: metrics
